--- a/calendar_frontend/package.json
+++ b/calendar_frontend/package.json
@@ -14,7 +14,9 @@
     "@fullcalendar/timegrid": "^5.11.0",
     "@fullcalendar/vue3": "^5.11.1",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.8.3",
+    "dayjs": "^1.11.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
