--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 /calendar_front/node_modules/
 /calendar_backend/node_modules/
-/calendar_backend/config/serverConfig
+/calendar_backend/config/serverConfig.js
